references to stylesheets, scripts in html files changed

--- a/node/pages/index.html
+++ b/node/pages/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script type="text/javascript" src="mainscript.js"></script>
+    <script type="text/javascript" src="./mainscript.js"></script>
 </head>
 
 
@@ -19,21 +19,21 @@
             <table class="MainTitle">
                 <col style="width:20%">
                 <col style="width: 80%">
-                <tr id="Logodiv"><td><img src="Images/Logo_borderless.png" id="Logo"></td><td><div class="Navigation">
+                <tr id="Logodiv"><td><img src="./Logo_borderless.png" id="Logo"></td><td><div class="Navigation">
                     <ul class="Navigation">
-                        <li id="NavItem"><a href="agb.html" style="color: black;">AGB</a></li>
-                        <li id="NavItem"><a href="datenschutz.html" style="color: black;">Datenschutz</a></li>
-                        <li id="NavItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
-                        <li id="NavItem"><a href="qualifikationen.html" style="color: black;">Qualifikationen</a></li>
-                        <li id="NavItem"><a href="index.html" style="color: black;">Home</a></li>
+                        <li id="NavItem"><a href="./agb.html" style="color: black;">AGB</a></li>
+                        <li id="NavItem"><a href="./datenschutz.html" style="color: black;">Datenschutz</a></li>
+                        <li id="NavItem"><a href="./contact.html" style="color: black;">Kontakt</a></li>
+                        <li id="NavItem"><a href="./qualifikationen.html" style="color: black;">Qualifikationen</a></li>
+                        <li id="NavItem"><a href="./index.html" style="color: black;">Home</a></li>
                     </ul>
-                    <img class="topnav" src="Images/Hamburger_icon.svg" onclick="dropMenu()">
+                    <img class="topnav" src="./Hamburger_icon.svg" onclick="dropMenu()">
                     <ul class="Dropdown" id="DropdownMenu">
-                        <li id="DropdownItem"><a href="agb.html" style="color: black;">AGB</a></li>
-                        <li id="DropdownItem"><a href="datenschutz.html" style="color: black;">Datenschutz</a></li>
-                        <li id="DropdownItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
-                        <li id="DropdownItem"><a href="qualifikationen.html" style="color: black;">Qualifikationen</a></li>
-                        <li id="DropdownItem"><a href="index.html" style="color: black;">Home</a></li>
+                        <li id="DropdownItem"><a href="./agb.html" style="color: black;">AGB</a></li>
+                        <li id="DropdownItem"><a href="./datenschutz.html" style="color: black;">Datenschutz</a></li>
+                        <li id="DropdownItem"><a href="./contact.html" style="color: black;">Kontakt</a></li>
+                        <li id="DropdownItem"><a href="./qualifikationen.html" style="color: black;">Qualifikationen</a></li>
+                        <li id="DropdownItem"><a href="./index.html" style="color: black;">Home</a></li>
                     </ul>
                 </div>
             </td></tr>
@@ -45,15 +45,15 @@
     <body>
         <div class="Content">
             <div class="Beitragselement" onclick="showPopup1('popup1')">
-                <img id="Beitrag" src="Images/Titel1_final.jpg" >
+                <img id="Beitrag" src="./Titel1_final.jpg" >
                 <h3 id="Beitragstitel">Hundetraining fair und empathisch</h3>
             </div>
             <div class="Beitragselement" onclick="showPopup1('popup2')">
-                <img id="Beitrag" src="Images/Titel3_final.png" >
+                <img id="Beitrag" src="./Titel3_final.png" >
                 <h3 id="Beitragstitel">Wer bin ich?</h3>
             </div>
             <div class="Beitragselement" onclick="showPopup1('popup3')">
-                <img id="Beitrag" src="Images/Titel4_final.png" >
+                <img id="Beitrag" src="./Titel4_final.png" >
                 <h3 id="Beitragstitel">Wie entstand der Name meiner Hundeschule?</h3>
             </div>
  
