--- a/node/pages/qualifikationen.html
+++ b/node/pages/qualifikationen.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <script type="text/javascript" src="mainscript.js"></script>
-    <script type="text/javascript" src="qualifikationen.js"></script>
+    <script type="text/javascript" src="./mainscript.js"></script>
+    <script type="text/javascript" src="./qualifikationen.js"></script>
 </head>
 
 
@@ -24,22 +24,22 @@
             <table class="MainTitle">
                 <col style="width:20%">
                 <col style="width: 80%">
-                <tr id="Logodiv"><td><img src="Images/Logo_borderless.png" id="Logo"></td><td><div class="Navigation">
-                    <ul class="Navigation">
-                      <li id="NavItem"><a href="agb.html" style="color: black;">AGB</a></li>
-                      <li id="NavItem"><a href="datenschutz.html" style="color: black;">Datenschutz</a></li>
-                        <li id="NavItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
-                        <li id="NavItem"><a href="qualifikationen.html" style="color: black;">Qualifikationen</a></li>
-                        <li id="NavItem"><a href="index.html" style="color: black;">Home</a></li>
-                    </ul>
-                    <img class="topnav" src="Images/Hamburger_icon.svg" onclick="dropMenu()">
-                    <ul class="Dropdown" id="DropdownMenu">
-                      <li id="DropdownItem"><a href="agb.html" style="color: black;">AGB</a></li>
-                      <li id="DropdownItem"><a href="datenschutz.html" style="color: black;">Datenschutz</a></li>
-                        <li id="DropdownItem"><a href="contact.html" style="color: black;">Kontakt</a></li>
-                        <li id="DropdownItem"><a href="qualifikationen.html" style="color: black;">Qualifikationen</a></li>
-                        <li id="DropdownItem"><a href="index.html" style="color: black;">Home</a></li>
-                    </ul>
+                <tr id="Logodiv"><td><img src="./Logo_borderless.png" id="Logo"></td><td><div class="Navigation">
+                  <ul class="Navigation">
+                      <li id="NavItem"><a href="./agb.html" style="color: black;">AGB</a></li>
+                      <li id="NavItem"><a href="./datenschutz.html" style="color: black;">Datenschutz</a></li>
+                      <li id="NavItem"><a href="./contact.html" style="color: black;">Kontakt</a></li>
+                      <li id="NavItem"><a href="./qualifikationen.html" style="color: black;">Qualifikationen</a></li>
+                      <li id="NavItem"><a href="./index.html" style="color: black;">Home</a></li>
+                  </ul>
+                  <img class="topnav" src="./Hamburger_icon.svg" onclick="dropMenu()">
+                  <ul class="Dropdown" id="DropdownMenu">
+                      <li id="DropdownItem"><a href="./agb.html" style="color: black;">AGB</a></li>
+                      <li id="DropdownItem"><a href="./datenschutz.html" style="color: black;">Datenschutz</a></li>
+                      <li id="DropdownItem"><a href="./contact.html" style="color: black;">Kontakt</a></li>
+                      <li id="DropdownItem"><a href="./qualifikationen.html" style="color: black;">Qualifikationen</a></li>
+                      <li id="DropdownItem"><a href="./index.html" style="color: black;">Home</a></li>
+                  </ul>
                 </div>
             </td></tr>
             </table> 
