--- a/node/pages/index.html
+++ b/node/pages/index.html
@@ -43,7 +43,7 @@
     </header>
 
     <body>
-        <div class="Content">
+        <div class="Content" id="Content">
             <div class="Beitragselement" onclick="showPopup1('popup1')">
                 <img id="Beitrag" src="./Titel1_final.jpg" >
                 <h3 id="Beitragstitel">Hundetraining fair und empathisch</h3>
@@ -56,8 +56,6 @@
                 <img id="Beitrag" src="./Titel4_final.png" >
                 <h3 id="Beitragstitel">Wie entstand der Name meiner Hundeschule?</h3>
             </div>
- 
-
 
 
 
