--- a/node/pages/index.html
+++ b/node/pages/index.html
@@ -42,7 +42,7 @@
 
     </header>
 
-    <body>
+    <body onload="">
         <div class="Content" id="Content">
             <div class="Beitragselement" onclick="showPopup1('popup1')">
                 <img id="Beitrag" src="./Titel1_final.jpg" >
