fixed scrolling issue on posts

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
                 <img id="Beitrag" src="Images/Titel4_final.png" >
                 <h3 id="Beitragstitel">Wie entstand der Name meiner Hundeschule?</h3>
             </div>
- 
+            <div class="Beitragselement" onclick="showPopup1('popup4')">
+                <img id="Beitrag" src="Images/Titel4_final.png" >
+                <h3 id="Beitragstitel">Über die Hundeschule</h3>
+            </div>
 
 
 
@@ -120,6 +123,36 @@
                 <div class="item popupText">
                     <p>
                         Nach vielen Ideen, die ebenso oft wieder verworfen wurden, habe ich mich gefragt, was genau ich mit meiner Hundeschule erreichen will. Ich möchte Hunde und ihre Menschen zusammen auf einen gemeinsamen Weg bringen. Hunde haben 4 Pfoten, Menschen 2 Füße, und zusammen gehen sie 1 Weg. Und so war der Name der Hundeschule geboren.<br><br> <strong>Ziemlich simpel.</strong>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="popup1" id="popup4" style="top: 30%; margin-top: 20%;">
+            <div class="popupHeader">
+                <div class="title">Über die Hundeschule</div>
+                <button class="closebutton" onclick="removePopup1()">&times;</button>
+            </div>
+            <div class="popupBody">
+                <div class="item popupText">
+                    <p>
+                        Meine Hundeschule besteht seit dem 01.11.2018. Ich bin mobil unterwegs und helfe Menschen und Hunden im richtigen Umgang miteinander.<br><br>
+                        Mein Training basiert auf dem gemeinsamen Lernen von Mensch und Hund. Sie lernen miteinander und voneinander, um ein entspanntes Zusammenleben zu erreichen. 
+                        Es geht nicht darum, dass nur der Hund lernt, sich unserem Alltag anzupassen, auch der Mensch muss lernen, die Bedürfnisse und den Charakter seines Hundes zu verstehen.
+                         Das erfordert Wissen, das ich Ihnen gern vermitteln möchte. Es geht um das Verständnis für Ihren Vierbeiner, 
+                         warum er wann und wie reagiert und wie Sie damit umgehen und sich richtig verhalten.<br><br>
+                        Ich arbeite in meinen Trainings ohne aversive Reize wie z.B. Schmerzen, Angst, Einschüchterung etc. 
+                        Die Basis dafür ist ein gewaltfreier Umgang mit Ihrem Hund. Welcher Weg hierbei für Sie und Ihren Hund der richtige ist, 
+                        stellen wir gemeinsam in einem ausführlichen Analysegespräch fest. Hier stelle ich Ihnen viele Fragen, die helfen, den Ursprung des „Problems“ 
+                        Ihres Vierbeiners zu erkennen und entsprechende Lösungen dafür zu finden. Es hilft nichts, nur die Symptome zu behandeln, sondern an der Ursache muss gearbeitet werden. 
+                        Sonst tritt eher früher als später dieses Verhalten, wahrscheinlich um einiges kreativer als vorher, wieder auf. Oder es kommen noch andere unerwünschte 
+                        Verhaltensweisen dazu.<br><br>
+                        Wir besprechen einen individuell auf Sie und Ihren Hund abgestimmten Trainingsplan, den wir gemeinsam umsetzen.<br><br>
+                        Weiterhin biete ich individuelle Hilfe beim Verstehen von Hunden jeder Altersstufe in Theorie und Praxis an. 
+                        Sie lernen, in die Welt der Hundesprache einzutauchen und Ihre Sprache (auch Körpersprache) richtig,  für Ihren Hund verständlich, einzusetzen.<br><br>
+                        Ihr Hund und Sie lernen die Grundsignale und eine alltagstaugliche Leinenführigkeit kennen. Sie erfahren mehr über den sinnvollen Einsatz von Signalen, 
+                        welche in verschiedenen Situationen  gegeben werden.<br><br>
+                        Gehen Sie respektvoll und fair mit Ihrem vierbeinigen Begleiter um, damit Sie ihren gemeinsamen Weg finden können.
                     </p>
                 </div>
             </div>
