new post formattet

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h3 id="Beitragstitel">Wie entstand der Name meiner Hundeschule?</h3>
             </div>
             <div class="Beitragselement" onclick="showPopup1('popup4')">
-                <img id="Beitrag" src="Images/Titel4_final.png" >
+                <img id="Beitrag" src="Images/Titel5_final.jpg" >
                 <h3 id="Beitragstitel">Über die Hundeschule</h3>
             </div>
 
@@ -153,6 +153,10 @@
                         Ihr Hund und Sie lernen die Grundsignale und eine alltagstaugliche Leinenführigkeit kennen. Sie erfahren mehr über den sinnvollen Einsatz von Signalen, 
                         welche in verschiedenen Situationen  gegeben werden.<br><br>
                         Gehen Sie respektvoll und fair mit Ihrem vierbeinigen Begleiter um, damit Sie ihren gemeinsamen Weg finden können.
+                    </p>
+                    <p class="Quote">
+                        <em>Die Erfahrung lehrt uns, dass die Liebe nicht darin besteht, dass man einander ansieht, sondern dass man in die gleiche Richtung blickt</em><br>
+                        - Antoine de Saint-Exupèry
                     </p>
                 </div>
             </div>
