--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
         </div>
 
-        <div class="popup1" id="popup4" style="top: 30%; margin-top: 20%;">
+        <div class="popup1" id="popup4" style="top: 30%;">
             <div class="popupHeader">
                 <div class="title">Über die Hundeschule</div>
                 <button class="closebutton" onclick="removePopup1()">&times;</button>
