--- a/qualifikationen.html
+++ b/qualifikationen.html
@@ -24,7 +24,7 @@
             <table class="MainTitle">
                 <col style="width:20%">
                 <col style="width: 80%">
-                <tr id="Logodiv"><td><img src="Images/Logo_borderless.png" id="Logo"></td><td><div class="Navigation">
+                <tr id="Logodiv"><td><a href="index.html"><img src="Images/Logo_borderless.png" id="Logo"></a></td><td><div class="Navigation">
                     <ul class="Navigation">
                       <li id="NavItem"><a href="agb.html" style="color: black;">AGB</a></li>
                       <li id="NavItem"><a href="datenschutz.html" style="color: black;">Datenschutz</a></li>
