--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             <table class="MainTitle">
                 <col style="width:20%">
                 <col style="width: 80%">
-                <tr id="Logodiv"><td><img src="Images/Logo_borderless.png" id="Logo"></td><td><div class="Navigation">
+                <tr id="Logodiv"><td><a href="index.html"><img src="Images/Logo_borderless.png" id="Logo"></a></td><td><div class="Navigation">
                     <ul class="Navigation">
                         <li id="NavItem"><a href="agb.html" style="color: black;">AGB</a></li>
                         <li id="NavItem"><a href="datenschutz.html" style="color: black;">Datenschutz</a></li>
@@ -58,12 +58,12 @@
             <div class="Angebote">
                 <h3 id="FAQ">FAQ</h3>
                 <div class="QA">
-                    <p class="Frage">Wann kann ich ein Termin buchen?</p>
-                    <p class="Antwort">Ein Termin kann bei mir jederzeit gebucht werden, dazu Rufen Sie mich einfach unter meiner Nummer an, schreiben mir eine E-Mail oder senden mir eine WhatsApp.</p>
+                    <p class="Frage">Wann kann ich einen Termin buchen?</p>
+                    <p class="Antwort">Ein Termin kann bei mir jederzeit gebucht werden, dazu rufen Sie mich einfach unter meiner Nummer an, schreiben mir eine E-Mail oder senden mir eine WhatsApp.</p>
                 </div>
                 <div class="QA">
-                    <p class="Frage">Was sind die Öffnungszeiten?</p>
-                    <p class="Antwort">Da ich eine <u>mobile</u> Hundeschule betreibe, gebe ich keine Öffnungszeiten an. Wenn wir einen Termin vereinbaren, schauen wir einfach, wann es Ihnen am besten passt und wann ich einen Termin frei habe.</p>
+                    <p class="Frage">Wie sind die Öffnungszeiten?</p>
+                    <p class="Antwort">Da ich eine <u>mobile</u> Hundeschule betreibe, gebe ich keine Öffnungszeiten an. Wenn wir einen Termin vereinbaren, schauen wir einfach, wann es Ihnen am besten passt und ich einen Termin frei habe.</p>
                 </div>
             </div>
         </div>
