added meta Tags

--- a/agb.html
+++ b/agb.html
@@ -1,5 +1,6 @@
 <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="Hundeschule, Lokal, Klettenberg, Training, Hohenstein, Nordhausen, Hundetrainerin, Hundetrainer, Hund, Tier, Erziehung">
     <title>Hundeschule 421</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="datenschutz.css">
