search Engine Optimization

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Hundeschule, Lokal, Klettenberg, Training, Hohenstein, Nordhausen, Hundetrainerin, Hundetrainer, Hund, Tier, Erziehung">
-    <title>Hundeschule 421</title>
+    <meta name="description" content="Hier finden Sie Informationen, wie ich zu erreichen bin.">
+    <title>Kontakt</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="contact.css">
 
