--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Hundeschule, Lokal, Klettenberg, Training, Hohenstein, Nordhausen, Hundetrainerin, Hundetrainer, Hund, Tier, Erziehung">
+    <meta name="description" content="Hundetraining fair und empathisch! Ich arbeite zusammen mit Ihnen und Ihrem Hund um ein harmonisches Zusammenleben zu ermöglichen.">
 
 
     <title>Hundeschule 421</title>
