--- a/qualifikationen.html
+++ b/qualifikationen.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Hundeschule, Lokal, Klettenberg, Training, Hohenstein, Nordhausen, Hundetrainerin, Hundetrainer, Hund, Tier, Erziehung">
-    <title>Hundeschule 421</title>
+    <title>Qualifikationen</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="qualifikationen.css"
