--- a/datenschutz.html
+++ b/datenschutz.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Hundeschule, Lokal, Klettenberg, Training, Hohenstein, Nordhausen, Hundetrainerin, Hundetrainer, Hund, Tier, Erziehung">
+    <meta name="description" content="Hundetraining fair und empathisch! Ich arbeite zusammen mit Ihnen und Ihrem Hund um ein harmonisches Zusammenleben zu ermöglichen.">
     <title>Datenschutz</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="datenschutz.css">
