converted pictures to webp

--- a/agb.html
+++ b/agb.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Hundeschule, Lokal, Klettenberg, Training, Hohenstein, Nordhausen, Hundetrainerin, Hundetrainer, Hund, Tier, Erziehung">
-    <meta name="description" content="Hundetraining fair und empathisch! Ich arbeite zusammen mit Ihnen und Ihrem Hund um ein harmonisches Zusammenleben zu ermöglichen.">
+    <meta name="description" content="Hier werden meine Geschäftsbedingungen aufgelistet">
     <title>AGB</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="datenschutz.css">
