--- a/index.html
+++ b/index.html
@@ -49,23 +49,23 @@
     <body>
         <div class="Content">
             <div class="Beitragselement" onclick="showPopup1('popup1')">
-                <img id="Beitrag" src="Images/Titel1_final.jpg" >
+                <img id="Beitrag" src="Images/Titel1_final.webp" >
                 <h3 id="Beitragstitel">Hundetraining fair und empathisch</h3>
             </div>
             <div class="Beitragselement" onclick="showPopup1('popup2')">
-                <img id="Beitrag" src="Images/Titel3_final.png" >
+                <img id="Beitrag" src="Images/Titel3_final.webp" >
                 <h3 id="Beitragstitel">Wer bin ich?</h3>
             </div>
             <div class="Beitragselement" onclick="showPopup1('popup3')">
-                <img id="Beitrag" src="Images/Titel4_final.png" >
+                <img id="Beitrag" src="Images/Titel4_final.webp" >
                 <h3 id="Beitragstitel">Wie entstand der Name meiner Hundeschule?</h3>
             </div>
             <div class="Beitragselement" onclick="showPopup1('popup4')">
-                <img id="Beitrag" src="Images/Titel5_final.jpg" >
+                <img id="Beitrag" src="Images/Titel5_final.webp" >
                 <h3 id="Beitragstitel">Über die Hundeschule</h3>
             </div>
             <div class="Beitragselement" onclick="showPopup1('popup5')">
-                <img id="Beitrag" src="Images/Titel6_final.jpg" >
+                <img id="Beitrag" src="Images/Titel6_final.webp" >
                 <h3 id="Beitragstitel">Mitgliedschaften</h3>
             </div>
 
