--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="mainscript.js"></script>
+
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script> 
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> 
+    <script type="text/babel" src="mainreact.js"></script>
 </head>
 
 
@@ -69,19 +74,7 @@
                 <h3 id="Beitragstitel">Mitgliedschaften</h3>
             </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+            
 
             <div class="popup1" id="popup1">
                 <div class="popupHeader">
@@ -192,6 +185,13 @@
 
     </div>
 
+    <div id="text1">
+
+    </div>
+
+    <script type="text/babel">
+        
+    </script>
 
     </body>
     <div class="footer-basic">
