some more Playing around with React

--- a/hundeschule/public/index.html
+++ b/hundeschule/public/index.html
@@ -14,5 +14,7 @@
   <body>
     <div id="root"></div>
     <div id="counter"></div>
+    <div id="functionalComp"></div>
+    <div id="moin"></div>
   </body>
 </html>
