neuer temp-Beitrag erstellt

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 <img id="Beitrag" src="Images/Titel6_final.webp" >
                 <h3 id="Beitragstitel">Mitgliedschaften</h3>
             </div>
+            <div class="Beitragselement" onclick="showPopup1('popup5')">
+                <img id="Beitrag" src="Images/Titel6_final.webp" >
+                <h3 id="Beitragstitel">Kundenhunde</h3>
+            </div>
 
 
 
