--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="mainscript.js"></script>
 </head>
@@ -45,6 +46,13 @@
         </div>
 
     </header>
+    <div class="footer-basic">
+        <footer>
+            <div class="social"><a href="https://wa.me/+491783782701"><i class="icon ion-social-whatsapp"></i></a>
+                <a href="https://www.facebook.com/Hundeschule421"><i class="icon ion-social-facebook"></i></a>
+                <a href="https://t.me/491783782701"><i class="fa fa-telegram"></i></a></div>
+        </footer>
+    </div>
 
     <body>
         <div class="Content">
