--- a/hundeschule/public/index.html
+++ b/hundeschule/public/index.html
@@ -16,5 +16,7 @@
     <div id="counter"></div>
     <div id="functionalComp"></div>
     <div id="moin"></div>
+    <div id="buttonDiv"></div>
+    <div id="nameList"></div>
   </body>
 </html>
